# LearnOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  callbacks.cpp  callbacks.h  camera.h  imgui.ini  imgui_impl_opengl3_wrapper.cpp  light.h  main.cpp  material.h  misc_functions.cpp  misc_functions.h  resource_root.cpp  resource_root.h  shader.cpp  shader.h  test_suit.cpp  test_suit.h  texture.cpp  texture.h  vertex_array_object.h
agents/: Agents.md
assets/models/tom/: desktop.ini  tom.mtl
basic/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  imgui_font_setup.cpp  imgui_font_setup.h  imgui_form.h  light.cpp  light.h  material.cpp  material.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_array_object.h
scripts/: README.md  build_csharp.sh  mono_invoker.cpp  mono_invoker.h
scripts/csharp/: ExampleScript.cs  MoveController.cs  Scripts.csproj
shaders/: fragment.shader  vertex.shader
shaders/advanced_glsl_test/: fragment.shader  light_fragment.shader  vertex.shader  vertex_with_uniform_buffer.shader
shaders/blender_test_test/: fragment.shader
shaders/color_test/: fragment.shader  vertex.shader
shaders/cull_test_test/: fragment.shader  vertex.shader
shaders/depth_test_test/: fragment.shader
shaders/geometry_shader_test/: explosion.shader  line_strip.shader  show_normal.shader  triangle_strip.shader  vertex_for_cube.shader  vertex_for_points.shader
shaders/import_model_test/: fragment.shader  vertex.shader
shaders/instance_test/: fragment.shader  vertex_pass_by_attrib.shader  vertex_pass_by_uniform.shader
shaders/light_color_test/: fragment.shader  vertex.shader
shaders/light_material_test/: fragment.shader
shaders/light_texture_test/: fragment.shader  light_fragment.shader  vertex.shader
shaders/light_type_test/: fragment.shader
shaders/multiple_light_test/: fragment.shader
shaders/occt_demo/: fragment.shader  vertex.shader
shaders/reveal_chess_test/chess_board/: fragment.shader  geometry.shader  vertex.shader
shaders/reveal_chess_test/chess_hint/: last_move_fragment.shader  last_move_geometry.shader  last_move_vertex.shader  valid_move_fragment.shader  valid_move_geometry.shader  valid_move_vertex.shader
shaders/reveal_chess_test/chess_piece/: fragment.shader  geometry.shader  vertex.shader
shaders/script_editor_test/: fragment.shader  vertex.shader
shaders/shader_editor_test/brick_pattern/: fragment.shader
shaders/shader_editor_test/default/: fragment.shader  vertex.shader
shaders/shader_editor_test/func_step_basic/: fragment.shader  vertex.shader
shaders/shader_editor_test/func_step_draw_circle/: fragment.shader  vertex.shader
shaders/shader_editor_test/func_step_draw_circle_advanced/: fragment.shader
shaders/shader_editor_test/func_step_draw_line/: fragment.shader  vertex.shader
shaders/shader_editor_test/func_step_draw_rectangle/: fragment.shader  vertex.shader
shaders/shader_editor_test/move_the_shape/: fragment.shader
shaders/shader_editor_test/noise_advanced_fire/: fragment.shader
shaders/shader_editor_test/noise_basic/: fragment.shader
shaders/shader_editor_test/radar/: fragment.shader
shaders/shader_editor_test/rotate_the_shape/: fragment.shader
shaders/shader_editor_test/rotate_the_shape_with_anchor/: fragment.shader
shaders/shader_editor_test/shining_spot/: fragment.shader
shaders/shader_editor_test/textures/: fragment.shader
shaders/shader_editor_test/tiling/: fragment.shader
shaders/soft_body_frog/: body_fragment.shader  eye_geometry.shader  mouth_geometry.shader  mouth_vertex.shader  outline_fragment.shader  outline_geometry.shader
shaders/spline_movement_test/: control_point_fragment.shader  control_point_geometry.shader  control_point_vertex.shader  snake_fragment.shader  snake_geometry.shader  snake_line_fragment.shader  snake_line_geometry.shader  snake_vertex.shader
shaders/spline_movement_test/lizard/: leg_fragment.shader  leg_geometry.shader  leg_vertex.shader
shaders/spline_movement_test/snake/: body_fragment.shader  body_geometry.shader  body_vertex.shader  head_fragment.shader  head_geometry.shader  (+1 more)
shaders/stencil_test_test/: fragment.shader
shaders/tessellation_shader_test/: fragment.shader  tess_control.shader  tess_eval.shader  vertex.shader
shaders/text_renderer_test/: vertex.shader
shaders/texture_cube_test/: fragment.shader  skybox_fragment.shader  skybox_vertex.shader
shaders/texture_test/: fragment.shader  vertex.shader
shaders/transform_test/: fragment.shader  vertex.shader
shaders/triangle_test/: fragment.shader
test_component/: camera_controller.cpp  camera_controller.h
tests/cad/: instance.cpp  instance.h
tests/component/: camera_controller.cpp  camera_controller.h  connection.cpp  connection.h  interaction_utils.cpp  interaction_utils.h  mesh_manager.cpp  mesh_manager.h  opengl_shader_definition.cpp  opengl_shader_definition.h  prefab_cube.cpp  prefab_cube.h  prefab_quad.cpp  prefab_quad.h  script_editor.cpp  script_editor.h  shader_editor.cpp  shader_editor.h  shader_loader.cpp  sub_scene.h  text_renderer.cpp  text_renderer.h
tests/framework/: test_suit.cpp  test_suit.h
tests/scenes/: advanced_glsl_scene.cpp  advanced_glsl_scene.h  advanced_glsl_sub_scenes.cpp  advanced_glsl_sub_scenes.h  blender_test_scene.cpp  blender_test_scene.h  camera_scene_base.cpp  camera_scene_base.h  camera_test_scene.cpp  camera_test_scene.h  color_test_scene.cpp  color_test_scene.h  coordinate_test_scene.cpp  coordinate_test_scene.h  cull_test_scene.cpp  cull_test_scene.h  depth_test_scene.cpp  depth_test_scene.h  geometry_shader_scene.cpp  geometry_shader_scene.h  geometry_shader_sub_scenes.cpp  geometry_shader_sub_scenes.h  import_mesh.cpp  import_mesh.h  import_model.cpp  import_model.h  import_model_scene.cpp  import_model_scene.h  instance_scene.cpp  instance_scene.h  instance_sub_scenes.cpp  instance_sub_scenes.h  light_color_scene.cpp  light_color_scene.h  light_material_scene.cpp  light_material_scene.h  light_texture_scene.cpp  light_texture_scene.h  light_type_scene.cpp  light_type_scene.h  (+44 more)
(+64 files in other folders)
